Criar Uma Página Web Utilizando as Tags Aprendidas

--- a/2 Criar Uma Página Web Utilizando as Tags Aprendidas/index.html
+++ b/2 Criar Uma Página Web Utilizando as Tags Aprendidas/index.html
@@ -10,6 +10,7 @@
     <h1 id="home">Desafio Dio - Criar Uma Página Web Utilizando as Tags Aprendidas</h1>
     <blockquote><i>Vamos falar sobre a aprendizagem e o'que foi entendido sobre a <mark>introduçao do html na prática</mark></i></blockquote>
     <a target="_blank" href="https://www.linkedin.com/in/alysson-sousa-a5a863203/"><img width="15" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/800px-LinkedIn_logo_initials.png"> Meu linkedin</a>
+    <p><del>me chamo</del> <address>Alysson</address> espero que gostem dá uma olhada la &#128521;</p>
     
     <hr/>
 
@@ -97,6 +98,22 @@
         <i>i</i>
         <li><code class="w3-codespan">&lt;img&gt;</code></li>
         <img src="" alt="tag de imgem">
+        <li><code class="w3-codespan">&lt;mark&gt;</code></li>
+        <mark>mark</mark>
+        <li><code class="w3-codespan">&lt;sub&gt;</code></li>
+        <sub>sub</sub>
+        <li><code class="w3-codespan">&lt;sup&gt;</code></li>
+        <sup>sup</sup>
+        <li><code class="w3-codespan">&lt;hr&gt;</code></li>
+        <hr>
+        <li><code class="w3-codespan">&lt;small&gt;</code></li>
+        <small>samll</small>
+        <li><code class="w3-codespan">&lt;font&gt;</code></li>
+        <p><font color="red" face="Verdana, Geneva, sans-serif" size="+1">Your formatted text goes here</font></p>
+        <li><code class="w3-codespan">&lt;del&gt;</code></li>
+        <del>del</del>
+        <li><code class="w3-codespan">&lt;address&gt;</code></li>
+        <address>address</address>
     </ul>
     <h3>Artributos das Tags</h3>
     <p>os atributos podem podificar as tags exempro abaxos</p>
