--- a/3 Trabalhando com Formulários em HTML/index.html
+++ b/3 Trabalhando com Formulários em HTML/index.html
@@ -11,7 +11,7 @@
         Nome: <input type="text" name="name"><br>
         Idade: <input type="number" name="age"><br>
         Senha: <input type="password" name="password"><br>
-        <button type="submit">Enviar</button>
+        <button type="submit">Enviar</button><button type="reset">reset</button>
 
     </form>
 </body>
