Tag Input e Seus Tipos

--- a/3 Trabalhando com Formulários em HTML/input.html
+++ b/3 Trabalhando com Formulários em HTML/input.html
@@ -8,7 +8,15 @@
 <body>
     <form action="#">
         <label for="">Text: </label><input type="text" name="" id=""><br>
-        <label for="">Number: </label><input type="number" name="" id="">
+        <label for="">Number: </label><input type="number" name="" id="" min="0" step="5" max="99"><br>
+        <label for="">Button: </label><input type="button" value="Enviar"><br>
+        <label for="">Range: </label><input type="range" name="" id="" min="o" max="100" value="90"><br>
+        <label for="">ColoR: </label><input type="color" name="" id=""><br>
+        <label for="">E-mail: </label><input type="email" name="" id=""><br>
+        <label for="">Url :</label><input type="url" name="" id=""><br>
+        <label for="">Data: </label><input type="date" name="" id=""><br>
+        <label for="">week: </label><input type="week" name="" id=""><br>
+        <label for="">Button</label><button type="submit">Enviar</button>
     </form>
 </body>
 </html>
