Tag Input e Seus Tipos

--- a/3 Trabalhando com Formulários em HTML/input.html
+++ b/3 Trabalhando com Formulários em HTML/input.html
@@ -16,6 +16,9 @@
         <label for="">Url :</label><input type="url" name="" id=""><br>
         <label for="">Data: </label><input type="date" name="" id=""><br>
         <label for="">week: </label><input type="week" name="" id=""><br>
+        <label for="">moth: </label><input type="month" name="" id=""><br>
+        <label for="">Checkbox: </label><input type="checkbox" name="" id=""><br>
+        <label for="">Radio: </label><input type="radio" name="aceta" id=""><br>
         <label for="">Button</label><button type="submit">Enviar</button>
     </form>
 </body>
