Tag Input e Seus Tipos

--- a/3 Trabalhando com Formulários em HTML/input.html
+++ b/3 Trabalhando com Formulários em HTML/input.html
@@ -19,6 +19,9 @@
         <label for="">moth: </label><input type="month" name="" id=""><br>
         <label for="">Checkbox: </label><input type="checkbox" name="" id=""><br>
         <label for="">Radio: </label><input type="radio" name="aceta" id=""><br>
+        <label for="">Hidden: </label><input type="hidden" ><br>
+        <label for="">File: </label><input type="file" multiple><br>
+        <label for="">Serach: </label><input type="search"><br>
         <label for="">Button</label><button type="submit">Enviar</button>
     </form>
 </body>
