--- a/3 Trabalhando com Formulários em HTML/textarea.html
+++ b/3 Trabalhando com Formulários em HTML/textarea.html
@@ -18,7 +18,7 @@
         <br>
         <label for="">Assunto:</label><input type="text" name="subject" id=""><br>
         <label for="">Menssagem:</label>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <textarea name="" id="" cols="30" rows="10"></textarea><br>
         <button type="submit">Enviar</button>
     </form>
 </body>
