Formatando Textos - Parte 1

--- a/4 Estruturando seu HTML + Formatações/index.html
+++ b/4 Estruturando seu HTML + Formatações/index.html
@@ -6,6 +6,9 @@
     <title>Trilha html - Dio</title>
 </head>
 <body>
-    
+    <sub>*</sub><i>Programe</i><sup>*</sup> o <b>seu</b>  <u>futuro</u> <mark>global</mark> agora!
+    <blockquote>blockquote</blockquote> 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim optio reiciendis reprehenderit! Error distinctio vitae beatae corrupti, tenetur doloremque, animi saepe pariatur culpa nisi in molestiae ducimus excepturi voluptas tempora.</p>
+    p>lorem 
 </body>
 </html>
