--- a/4 Estruturando seu HTML + Formatações/index.html
+++ b/4 Estruturando seu HTML + Formatações/index.html
@@ -10,5 +10,10 @@
     <blockquote>blockquote</blockquote> 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim optio reiciendis reprehenderit! Error distinctio vitae beatae corrupti, tenetur doloremque, animi saepe pariatur culpa nisi in molestiae ducimus excepturi voluptas tempora.</p>
     p>lorem 
+
+    <br>
+    <font color="red" face="Arial">Programe</font> o seu futuro global agora! 
+    <br>letra seifada tipografia <br>
+    <font color="red" face="'Trebuchet MS', Tahoma">Programe</font> o seu futuro global agora! 
 </body>
 </html>
