--- a/4 Estruturando seu HTML + Formatações/Div e Span.html
+++ b/4 Estruturando seu HTML + Formatações/Div e Span.html
@@ -8,6 +8,12 @@
         span{
             color: red;
         }
+        #dio{
+            font-weight: bold;
+        }
+        .me{
+            color: aquamarine;
+        }
     </style>
 </head>
 <body>
@@ -24,6 +30,6 @@
 
     <hr>
     <p>Dio<div>.</div>me</p>
-    <p>Dio<span>.</span>me</p>
+    <p><span id="dio">Dio</span><span>.</span><span class="me">me</span></p>
 </body>
 </html>
