--- a/5 Trabalhando com Mídias utilizando HTML/video.html
+++ b/5 Trabalhando com Mídias utilizando HTML/video.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tag video</title>
+    <title>tag video e track</title>
 </head>
 <body>
-    <video controls width="400">
+    <video controls width="800">
         <source src="midias/SaveTube.io-Dragon Ball Z - Abertura 2[HD](Melhor Qualidade)-(1080p).mp4">
+        <track src="legenda.vtt" kind="captions" srclang="en">
+        <track default src="legenda-pt-br.vtt" kind="captions" srclang="pt-br">
         <source src="clipe.mp4">
         <source src="clipe.webm">
         Seu navegador nao suporta video
