--- a/5 Trabalhando com Mídias utilizando HTML/iframe.html
+++ b/5 Trabalhando com Mídias utilizando HTML/iframe.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/n_pgTSBCvvg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.4080337914047!2d-38.515439415777095!3d-3.7208553334551104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74840d9c9a9e3%3A0xe38ab341a9a17b5f!2sAv.%20Beira%20Mar%2C%201020%20-%20Meireles%2C%20Fortaleza%20-%20CE%2C%2060165-120!5e0!3m2!1spt-BR!2sbr!4v1691080598674!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
 </body>
 </html>
