--- a/7 Criando Tabelas com HTML/index.html
+++ b/7 Criando Tabelas com HTML/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tabalhando com tabelas - DIO.me</title>
+    <style>
+
+        table tr:nth-child(even){
+            background-color: burlywood;
+        }
+        table tr:hover td{
+            background-color: darkgray;
+        }
+    </style>
 </head>
 <body>
     <table summary="esta tabela se refere as idades da turma A da Dio" border="1" width="250" cellspacing="5" cellpadding="5" align="center">
@@ -11,9 +20,29 @@
             <td>Nome</td>
             <td>Idade</td>
         </tr>
-        <tr>
+        <tr id="1">
             <td>Diogo</td>
             <td>37</td>
+        </tr>
+        <tr id="2">
+            <td>Maria</td>
+            <td>34</td>
+        </tr>
+        <tr id="3">
+            <td>João</td>
+            <td>32</td>
+        </tr>
+        <tr id="4">
+            <td>Walter</td>
+            <td>24</td>
+        </tr>
+        <tr id="5">
+            <td>Manoela</td>
+            <td>28</td>   
+        </tr>
+        <tr id="6">
+            <td>Michele</td>
+            <td>26</td>
         </tr>
     </table>
 </body>
