--- a/7 Criando Tabelas com HTML/index.html
+++ b/7 Criando Tabelas com HTML/index.html
@@ -17,8 +17,8 @@
 <body>
     <table summary="esta tabela se refere as idades da turma A da Dio" border="1" width="250" cellspacing="5" cellpadding="5" align="center">
         <tr>
-            <td>Nome</td>
-            <td>Idade</td>
+            <th title="Nome completo">Nome</th>
+            <th title="Idade">Idade</th>
         </tr>
         <tr id="1">
             <td>Diogo</td>
