--- a/7 Criando Tabelas com HTML/index.html
+++ b/7 Criando Tabelas com HTML/index.html
@@ -16,34 +16,36 @@
 </head>
 <body>
     <table summary="esta tabela se refere as idades da turma A da Dio" border="1" width="250" cellspacing="5" cellpadding="5" align="center">
-        <tr>
-            <th title="Nome completo">Nome</th>
-            <th title="Idade">Idade</th>
-        </tr>
-        <tr id="1">
-            <td>Diogo</td>
-            <td>37</td>
-        </tr>
-        <tr id="2">
-            <td>Maria</td>
-            <td>34</td>
-        </tr>
-        <tr id="3">
-            <td>João</td>
-            <td>32</td>
-        </tr>
-        <tr id="4">
-            <td>Walter</td>
-            <td>24</td>
-        </tr>
-        <tr id="5">
-            <td>Manoela</td>
-            <td>28</td>   
-        </tr>
-        <tr id="6">
-            <td>Michele</td>
-            <td>26</td>
-        </tr>
+        <tbody>
+            <tr>
+                <th title="Nome completo">Nome</th>
+                <th title="Idade">Idade</th>
+            </tr>
+            <tr id="1">
+                <td>Diogo</td>
+                <td>37</td>
+            </tr>
+            <tr id="2">
+                <td>Maria</td>
+                <td>34</td>
+            </tr>
+            <tr id="3">
+                <td>João</td>
+                <td>32</td>
+            </tr>
+            <tr id="4">
+                <td>Walter</td>
+                <td>24</td>
+            </tr>
+            <tr id="5">
+                <td>Manoela</td>
+                <td>28</td>   
+            </tr>
+            <tr id="6">
+                <td>Michele</td>
+                <td>26</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
